@@ -1,5 +1,6 @@
 1.3.0
 -Update geometry types
+-Support Dialog margin
 
 1.2.4
 -Added hkoapi
